Revamped Framebuffer and added a deffered chain rendering pipeline.